--- a/timer/assets/css/style.css
+++ b/timer/assets/css/style.css
@@ -58,6 +58,10 @@ form button:hover {
     background-color: var(--primary-color-darker);
 }
 
-#timer {
+.relogio {
     font-size: 2.1em;
+}
+
+.pausado {
+    color: #ff0000
 }
